--- a/css/layout.css
+++ b/css/layout.css
@@ -32,13 +32,16 @@ header {
    position: relative;
    height: 800px;
    width: 100%;
-   background: #161415 url(../images/header-background.jpg) no-repeat top center;
-   background-size: cover !important;
-	-webkit-background-size: cover !important;
+   background-image: url("/images/agri-photo.jpg");
+   background-size: cover;
+   background-repeat: no-repeat;
    text-align: center;
    overflow: hidden;
    padding-block: 2rem;
+   /* Apply brightness filter to darken the background */
+   filter: brightness(0.7); /* Adjust the value (0.7) as needed */
 }
+
 
 /* vertically center banner section */
 header:before {
@@ -59,21 +62,21 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
-   color: #fff;
+   color: #000000;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   color: #000000;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: #fff;
+   color: #000000;
 }
 header .banner-text hr {
    width: 60%;
@@ -139,6 +142,8 @@ header .scrolldown a:hover { color: #11ABB0; }
    position: fixed;
    left: 0;
    top: 0;
+   z-index: 1000;
+   background-color: #0D0D0D;
 }
 .opaque { background-color: #333; }
 
